[tool.poetry]
name = "vam"
version = "0.1.0"
description = ""
authors = ["Lucas Schorling mac <lucas.schorling@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.5"
torch = "^2.7.0"
torchvision = "^0.22.0"
matplotlib = "^3.10.1"
nltk = "^3.9.1"
wandb = "^0.19.11"
datasets = "^2.14.6"
torchtext = "^0.18.0"
scipy = "^1.15.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
